# hotdog

./: pyproject.toml
public/: .index.html.swp  index.html
src/hotdog/: main.py  util.py
