[project]
name = "hotdog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "jinja2>=3.1.4",
    "transformers>=4.45.0",
    "pytz>=2024.2",
    "python-multipart>=0.0.10",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
